force-app/main/default/objects/AgentGuard_Audit__e/AgentGuard_Audit__e.object-meta.xml
<CustomObject>
    <label>AgentGuard Audit Event</label>
    <pluralLabel>AgentGuard Audit Events</pluralLabel>
    <description>Immutable real-time audit stream for every AgentGuard decision (ALLOW, BLOCK, THROTTLED, ROLLBACK). Published outside the transaction rollback boundary per ADR-001 so blocked attempts always leave a durable record.</description>
</CustomObject>