force-app/main/default/objects/AgentGuard_Audit__e/fields/ActionName__c.field-meta.xml
<CustomField>
    <fullName>ActionName__c</fullName>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Invocable action name passed to AgentGuard.wrap().</description>
</CustomField>