force-app/main/default/objects/AgentGuard_Audit__e/fields/ActorId__c.field-meta.xml
<CustomField>
    <fullName>ActorId__c</fullName>
    <label>Actor Id</label>
    <length>18</length>
    <type>Text</type>
    <description>Running user whose context enforced the call (never a claimed identity).</description>
</CustomField>