force-app/main/default/objects/AgentGuard_Audit__e/fields/AgentKey__c.field-meta.xml
<CustomField>
    <fullName>AgentKey__c</fullName>
    <label>Agent Key</label>
    <length>130</length>
    <type>Text</type>
    <description>Hashed per-agent identity used for rate-limit scoping.</description>
</CustomField>