force-app/main/default/objects/AgentGuard_Audit__e/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <description>ALLOW | BLOCK | THROTTLED | ROLLBACK.</description>
</CustomField>