force-app/main/default/objects/AgentGuard_Audit__e/fields/Flagged__c.field-meta.xml
<CustomField>
    <fullName>Flagged__c</fullName>
    <label>Flagged</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>Degraded-mode marker, e.g. allow-and-log during a Platform Cache outage.</description>
</CustomField>