force-app/main/default/objects/AgentGuard_Audit__e/fields/GateName__c.field-meta.xml
<CustomField>
    <fullName>GateName__c</fullName>
    <label>Gate Name</label>
    <length>40</length>
    <type>Text</type>
    <description>Gate that produced the decision: FACADE | SCHEMA | ACCESS | RATE | ROLLBACK.</description>
</CustomField>