force-app/main/default/objects/AgentGuard_Audit__e/fields/LatencyMs__c.field-meta.xml
<CustomField>
    <fullName>LatencyMs__c</fullName>
    <label>Latency (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>CPU milliseconds spent inside the gate chain.</description>
</CustomField>