force-app/main/default/objects/AgentGuard_Audit__e/fields/PayloadHash__c.field-meta.xml
<CustomField>
    <fullName>PayloadHash__c</fullName>
    <label>Payload Hash</label>
    <length>64</length>
    <type>Text</type>
    <description>SHA-256 hex digest of the raw payload — proves what was attempted without storing payload contents.</description>
</CustomField>