force-app/main/default/objects/AgentGuard_Audit__e/fields/PolicyName__c.field-meta.xml
<CustomField>
    <fullName>PolicyName__c</fullName>
    <label>Policy Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Guard_Policy__mdt DeveloperName the call was evaluated against.</description>
</CustomField>