force-app/main/default/objects/AgentGuard_Audit__e/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
    <description>Human-readable reason; names the violated rule or field for non-ALLOW decisions.</description>
</CustomField>